<resources>
    <string name="app_name">Donde Estaciono</string>
    <string name="title_activity_maps">Map</string>
    <string name="about_it">Acerca</string>

    <string name="options_title">Opciones</string>
    <string name="parking_titles">Estacionamientos</string>
    <string name="zones_titles">Inconvenientes</string>
    <string name="blocks_titles">Cortes</string>

    <string name="channel_name">donde_estaciono</string>
    <string name="channel_description">donde_estaciono Canal</string>
    <string name="search_box_tips">Buscar dirección</string>

    <string name="habilitado">Habilitado</string>
    <string name="no_habilitado">No habilitado</string>
    <string name="label_calle">Calle</string>
    <string name="label_altura">Altura</string>
    <string name="label_horario">Horario</string>
    <string name="label_tipo">Tipo</string>
    <string name="label_creado">Creado</string>
    <string name="label_tweet">Tweet</string>

    <string name="text_numero_calle">%1$s %2$s</string>
</resources>
