<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/fragment_maps"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="@dimen/search_box_margin_horizontal"
            android:layout_marginTop="@dimen/search_box_margin_top"
            android:layout_marginRight="@dimen/search_box_margin_horizontal"
            android:background="@drawable/shape_search_box"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/button_open_menu_maps"
                android:layout_width="56dp"
                android:layout_height="48dp"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                android:paddingEnd="8dp"
                android:paddingRight="8dp"
                android:scaleType="center"
                android:tint="@color/colorMenuIcon"
                app:backgroundTint="@android:color/transparent"
                app:srcCompat="@drawable/ic_menu_black" />

            <EditText
                android:id="@+id/text_search_box_maps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:hint="@string/search_box_tips"
                android:importantForAutofill="no"
                android:inputType="text"
                android:background="@android:color/transparent"
                />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_my_location_maps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right|end"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin_bottom_sheet"
            app:backgroundTint="@color/colorBackgroundFloating"
            app:layout_anchor="@id/bottom_sheet_layout_maps"
            app:layout_anchorGravity="end"
            app:srcCompat="@drawable/ic_my_location_black"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginBottom="@dimen/fab_margin_bottom_sheet"
            app:layout_anchor="@id/bottom_sheet_layout_maps"
            app:layout_anchorGravity="center"
            >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:background="@color/colorLineHabilitado"
                android:text="@string/habilitado" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorTextLight"
                android:background="@color/colorLineNoHabilitado"
                android:text="@string/no_habilitado"  />
        </LinearLayout>

        <include
            android:id="@+id/bottom_sheet_layout_maps"
            layout="@layout/bottom_sheet_maps" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
