<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <LinearLayout
        android:id="@+id/layout_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shape_bottom_sheet"
        app:behavior_hideable="false"
        app:behavior_peekHeight="32dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        >

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_remove_gray"
            android:contentDescription="@string/app_name" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_estacionamiento_details"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/text_calle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ellipsize="marquee"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="@color/color_text"
                android:textIsSelectable="false"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/color_bottom_sheet_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_calle"
                >

                <ImageView
                    android:id="@+id/logo_horario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_timer_black" />

                <TextView
                    android:id="@+id/text_horario"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/app_name"
                    android:textColor="@color/color_text"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/logo_horario"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/logo_tipo_estacionamiento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/logo_horario"
                    app:srcCompat="@drawable/ic_help_black"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:id="@+id/text_tipo_estacionamiento"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/app_name"
                    android:textColor="@color/color_text"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/logo_tipo_estacionamiento"
                    app:layout_constraintTop_toBottomOf="@+id/text_horario" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_corte_details"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            tools:visibility="visible">

            <TextView
                android:id="@+id/label_tipo"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/label_tipo"
                android:textColor="@color/color_text"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_tipo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/app_name"
                android:textColor="@color/color_text"
                android:textAllCaps="true"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/label_tipo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/label_tipo" />

            <TextView
                android:id="@+id/label_creado"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/label_creado"
                android:textColor="@color/color_text"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_tipo" />

            <TextView
                android:id="@+id/text_creado"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/app_name"
                android:textColor="@color/color_text"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/label_creado"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/label_creado" />

            <TextView
                android:id="@+id/label_tweet"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/label_tweet"
                android:textColor="@color/color_text"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_creado" />

            <TextView
                android:id="@+id/text_tweet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/app_name"
                android:textColor="@color/color_text"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/label_tweet"
                app:layout_constraintTop_toTopOf="@+id/label_tweet" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>